--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
   background-color: green;
 
 }
-#datos0, #datos1, #datos2, #datos3, #datos4{
+#datos0, #datos1, #datos2, #datos3, #datos4, #datos5, #datos6, #datos7, #datos8, #datos9{
   font-family: monospace;
   white-space: pre;
 }
